2009-01-13  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Further CURRENT_APP_WINDOW cleanups.

	* src/mb/hd-comp-mgr.h:
	  Introduced some common macros.
	* src/home/hd-task-navigator.c:
	  Updated to use them.
	* src/home/hd-render-manager.c:
	  Likewise.  Clear the CURRENT_APP_WINDOW property
	  if entering the tasw or talu.
	* src/mb/hd-comp-mgr.c:
	  current_app() => hd_wm_get_current_app()
	* src/mb/hd-wm.h
	* src/mb/hd-wm.c:
	  Added hd_wm_set_current_app_property() to centralize it.
	  hd_wm_get_current_app() takes the client's geometry into account
	  and no longer considers systemui-windows.

2009-01-12  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/launcher/hd-launcher.c:
	  Added null pointer check for something that was giving me problems.
	  Possibly only occurs when used with the wrong libs, but good to have.
	* src/home/hd-render-manager.c:
	  hd_render_manager_return_windows only returns 'normal' windows now
	  status menu is raised above the Operator logo and top-left button

2009-01-12  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.14

2009-01-12  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c:
	  remove unneeded commented lines
	* src/mb/hd-comp-mgr.c:
	  fixed possible VKB issues

2009-01-12  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.h
	* src/home/hd-switcher.c:	
	  Now stop blur transitions as soon as app is zoomed right in.
	* src/home/hd-render-manager.c:
	  Method to stop transitions early. 'front' now visible even for
	  fullscreen apps (for notifications in FS mode - eg. 'Max zoom 
	  reached'). Removed code that restacked the current focused app,
	  and now use matchbox order, pulling non-fullscreen dialogs out
	  of the blur box.
	* src/mb/hd-comp-mgr.c:
	  Now return windows before stacking so they can be stacked properly,
	  and don't blur background for fullscreen dialogs (VKB) as hdrm will 
	  leave any fullscreen window in the blurbox.